--- a/exercises/package.json
+++ b/exercises/package.json
@@ -10,5 +10,8 @@
     "testEnvironment": "node"
   },
   "author": "stephen grider",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "weak": "^1.0.1"
+  }
 }
